[tool.poetry]
name = "gemscapes-classification"
version = "0.1.0"
description = ""
authors = ["Dean Shaff <dean.shaff@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.18.*"
tensorflow = "^2.3.1"
eyeD3 = "^0.9.5"
pysndfile = "^1.4.3"
matplotlib = "^3.3.2"
boto3 = "^1.16.33"
tqdm = "^4.54.1"
h5py = "2.10.0"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
